Fix UTF-8 references